Basic site layout

--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<br>
+<!--<br>
 <img src="assets/images/todolist.png" class="screenshots"/>
 <br>
 <a target="_blank" href="{{ToDoList}}">To-Do List App</a>
@@ -85,4 +85,16 @@
     <li>Email: eaadalen112&#64;gmail.com</li>
     <li><a target="_blank" href="https://github.com/eaadalen">Github</a></li>
     <li><a target="_blank" href="https://www.linkedin.com/in/erik-aadalen-415909168/">LinkedIn</a></li>
-</ul>
+</ul>-->
+
+<div class="title-box">
+    <h1 class="title">Welcome! I'm Erik</h1>
+</div>
+<div class="container" style="display: flex;">
+    <img src="assets/images/todolist.png" class="screenshots"/>
+    <img src="assets/images/todolist.png" class="screenshots"/>
+    <img src="assets/images/todolist.png" class="screenshots"/>
+    <img src="assets/images/todolist.png" class="screenshots"/>
+    <img src="assets/images/todolist.png" class="screenshots"/>
+    <img src="assets/images/todolist.png" class="screenshots"/>
+</div>
