--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,5 +1,42 @@
 .screenshots {
     width:100%;
     max-height:300px;
-    max-width:200px;
+    max-width:300px;
+    list-style: none;
+    min-width: 200px;
+    padding: 10px;
+}
+
+.container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: center;
+    position: relative;
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: content-box;
+}
+
+.title-box {
+    max-width: 80%;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 20px;
+    box-sizing: content-box;
+    border:3px solid black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.title {
+    text-align: center;
+    vertical-align: middle;
 }
