--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -1,100 +1,75 @@
 <!DOCTYPE html>
-<!--<br>
-<img src="assets/images/todolist.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{ToDoList}}">To-Do List App</a>
-<a target="_blank" href="{{ToDoListGithub}}" style="float: right;">Github Link</a>
-<p>
-    This app allows you to create a personalized to-do list, included with functionality
-    for creating new items, check boxes, and reordering the current list of items.
-</p>
-<p>
-    Technologies used: Javascript, HTML, CSS
-</p>
-<img src="assets/images/pokedex.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{PokeDex}}">PokeDex</a>
-<a target="_blank" href="{{PokeDexGithub}}" style="float: right;">Github Link</a>
-<p>
-    This app provides the user with a database of every Pokemon. When a user clicks on
-    a pokemon in the database, they are shown a modal with an image of the Pokemon as 
-    well as its height.
-</p>
-<p>
-    Technologies used: ESLint, Javascript, HTML, CSS
-</p>
-<img src="assets/images/rest-movie.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{RESTMovieAPI}}">RESTMovieAPI</a>
-<a target="_blank" href="{{RESTMovieAPIGithub}}" style="float: right;">Github Link</a>
-<p>
-    This API contains the setup for the backend of a movie database. It will respond to
-    various user requests (GET movies, POST new user, etc.) with the appropriate data.
-</p>
-<p>
-    Technologies used: Vercel, Express, HTTP, Mongod, Mongoose, Morgan, Passport, Javascript
-</p>
-<img src="assets/images/react-movie.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{ReactMovieAPI}}">ReactMovieAPI</a>
-<a target="_blank" href="{{ReactMovieAPIGithub}}" style="float: right;">Github Link</a>
-<p>
-    This project contains the frontend setup to be used in tandem with the backend setup
-    created in the "RESTMovieAPI" project, created using React. 
-</p>
-<p>
-    Technologies used: React, Bootstrap, Javascript, Redux, Parcel
-</p>
-<img src="assets/images/angular-movie.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{AngularMovieAPI}}">AngularMovieAPI</a>
-<a target="_blank" href="{{AngularMovieAPIGithub}}" style="float: right;">Github Link</a>
-<p>
-    This project contains the frontend setup to be used in tandem with the backend setup
-    created in the "RESTMovieAPI" project, created using Angular. 
-</p>
-<p>
-    Technologies used: Angular, Javascript, RXJS, Typescript
-</p>
-<img src="assets/images/meet-app.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{CodingEventsApp}}">CodingEventsApp</a>
-<a target="_blank" href="{{CodingEventsAppGithub}}" style="float: right;">Github Link</a>
-<p>
-    This app connects the user to a vast list of coding events, using the Google Calendar
-    API. The user is able to filter by event language type, distance, and number of search
-    results to match them with the best event for their interests. 
-</p>
-<p>
-    Technologies used: React, Javascript, Recharts, Atatus, Axios, Jest, Puppeteer
-</p>
-<img src="assets/images/react-native.png" class="screenshots"/>
-<br>
-<a target="_blank" href="{{ChatApp}}">ChatApp</a>
-<a target="_blank" href="{{ChatAppGithub}}" style="float: right;">Github Link</a>
-<p>
-    This app utilizes GiftedChat to allow users to exchange texts, images, and map
-    locations. The messages are stored using Google Firebase.
-</p>
-<p>
-    Technologies used: React Native, Expo, Babel, GiftedChat
-</p>
-<br>
+<div class="title-box">
+    <h1 class="title">Welcome! I'm Erik</h1>
+</div>
+<div class="container" style="display: flex;">
+    <div class="project-tiles">
+        <img src="assets/images/pokedex.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This app provides the user with a database of every Pokemon. When a user clicks on
+            a pokemon in the database, they are shown a modal with an image of the Pokemon as 
+            well as its height.
+        </p>
+        <a target="_blank" href="{{PokeDex}}" class="tile-links">PokeDex</a>
+        <a target="_blank" href="{{PokeDexGithub}}" class="tile-links">Github Link</a>
+    </div>
+    <div class="project-tiles">
+        <img src="assets/images/rest-movie.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This API contains the setup for the backend of a movie database. It will respond to
+            various user requests (GET movies, POST new user, etc.) with the appropriate data.
+        </p>
+        <a target="_blank" href="{{RESTMovieAPI}}" class="tile-links">RESTMovieAPI</a>
+        <a target="_blank" href="{{RESTMovieAPIGithub}}" class="tile-links">Github Link</a>
+    </div>
+    <div class="project-tiles">
+        <img src="assets/images/react-movie.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This project contains the frontend setup to be used in tandem with the backend setup
+            created in the "RESTMovieAPI" project, created using React. 
+        </p>
+        <a target="_blank" href="{{ReactMovieAPI}}" class="tile-links">ReactMovieAPI</a>
+        <a target="_blank" href="{{ReactMovieAPIGithub}}" class="tile-links">Github Link</a>
+    </div>
+    <div class="project-tiles">
+        <img src="assets/images/angular-movie.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This project contains the frontend setup to be used in tandem with the backend setup
+            created in the "RESTMovieAPI" project, created using Angular. 
+        </p>
+        <a target="_blank" href="{{AngularMovieAPI}}" class="tile-links">AngularMovieAPI</a>
+        <a target="_blank" href="{{AngularMovieAPIGithub}}" class="tile-links">Github Link</a>
+    </div>
+    <div class="project-tiles">
+        <img src="assets/images/meet-app.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This app connects the user to a vast list of coding events, using the Google Calendar
+            API. The user is able to filter by event language type, distance, and number of search
+            results to match them with the best event for their interests. 
+        </p>
+        <a target="_blank" href="{{CodingEventsApp}}" class="tile-links">CodingEventsApp</a>
+        <a target="_blank" href="{{CodingEventsAppGithub}}" class="tile-links">Github Link</a>
+    </div>
+    <div class="project-tiles">
+        <img src="assets/images/react-native.png" class="screenshots"/>
+        <br>
+        <p class="project-description">
+            This app utilizes GiftedChat to allow users to exchange texts, images, and map
+            locations. The messages are stored using Google Firebase.
+        </p>
+        <a target="_blank" href="{{ChatApp}}" class="tile-links">ChatApp</a>
+        <a target="_blank" href="{{ChatAppGithub}}" class="tile-links">Github Link</a>
+    </div>
+</div>
+
 <h4>Contact Details</h4>
 <ul>
     <li>Email: eaadalen112&#64;gmail.com</li>
     <li><a target="_blank" href="https://github.com/eaadalen">Github</a></li>
     <li><a target="_blank" href="https://www.linkedin.com/in/erik-aadalen-415909168/">LinkedIn</a></li>
-</ul>-->
-
-<div class="title-box">
-    <h1 class="title">Welcome! I'm Erik</h1>
-</div>
-<div class="container" style="display: flex;">
-    <img src="assets/images/todolist.png" class="screenshots"/>
-    <img src="assets/images/todolist.png" class="screenshots"/>
-    <img src="assets/images/todolist.png" class="screenshots"/>
-    <img src="assets/images/todolist.png" class="screenshots"/>
-    <img src="assets/images/todolist.png" class="screenshots"/>
-    <img src="assets/images/todolist.png" class="screenshots"/>
-</div>
+</ul>
