--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,7 +1,7 @@
 .screenshots {
     width:100%;
-    max-height:300px;
-    max-width:300px;
+    max-height:250px;
+    max-width:250px;
     list-style: none;
     min-width: 200px;
     padding: 10px;
@@ -13,14 +13,12 @@
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
     flex-wrap: wrap;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: center;
     position: relative;
-    max-width: 80%;
+    max-width: 90%;
     margin: 0 auto;
     padding: 20px;
     box-sizing: content-box;
@@ -39,4 +37,25 @@
 .title {
     text-align: center;
     vertical-align: middle;
+}
+
+.project-tiles {
+    text-align: center;
+    vertical-align: middle;
+    max-width: 30%;
+    margin: 20px;
+    background-color: rgb(0, 153, 255);
+}
+
+.project-description {
+    text-align: center;
+    vertical-align: middle;
+    padding-left: 10px;
+    padding-right: 10px;
+    flex-grow: 1;
+}
+
+.tile-links {
+    padding-left: 10px;
+    padding-right: 10px;
 }
