--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -24,27 +24,35 @@
     box-sizing: content-box;
 }
 
-.title-box {
-    max-width: 80%;
-    margin: 0 auto;
-    justify-content: center;
-    padding: 20px;
-    box-sizing: content-box;
-    border:3px solid black;
+.navbar {
+    height: 60px;
+    margin: auto;
+    background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.title {
-    text-align: center;
-    vertical-align: middle;
+.nav-name {
+    float: left;
+    padding: 20px;
+}
+
+.nav-link {
+    float: right;
+    padding: 20px;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 20px;
 }
 
 .project-tiles {
+    border-radius: 10px;
     text-align: center;
     vertical-align: middle;
     max-width: 30%;
     margin: 20px;
     background-color: rgb(0, 153, 255);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .project-description {
