--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<div style="background-image: url('../../assets/images/background-2.jpg');">
+<div style="background-image: url('../../assets/images/background-2.jpg');" class="overall-container">
     <div class="navbar">
         <div class="nav-name">Erik Aadalen</div>
         <button class="nav-link" (click)="goToHome()">Home</button>
         <button class="nav-link" (click)="goToContact()">Contact</button>
-        <button class="nav-link" (click)="goToProjects()">Work</button>
         <button class="nav-link" (click)="goToAbout()">About</button>
     </div>
-    <div class="container" style="display: flex;">
+    <div class="projects-container">
         <div class="project-tiles">
             <h2>PokeDex App</h2>
             <!--<img src="../../assets/videos/pokedex.gif"  width="90%"/>-->
@@ -82,10 +81,4 @@
             <a target="_blank" href="{{ChatAppGithub}}" class="tile-links">Github Link</a>
         </div>
     </div>
-    <h4>Contact Details</h4>
-    <ul>
-        <li>Email: eaadalen112&#64;gmail.com</li>
-        <li><a target="_blank" href="https://github.com/eaadalen">Github</a></li>
-        <li><a target="_blank" href="https://www.linkedin.com/in/erik-aadalen-415909168/">LinkedIn</a></li>
-    </ul>
 </div>
