--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,13 +1,9 @@
-.screenshots {
-    width:100%;
-    max-height:250px;
-    max-width:250px;
-    list-style: none;
-    min-width: 200px;
-    padding: 10px;
+.overall-container {
+    display: flex;
+    column-gap: 100px;
 }
 
-.container {
+.projects-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -20,15 +16,17 @@
     position: relative;
     max-width: 90%;
     margin: 0 auto;
+    margin-top: 50px;
     padding: 20px;
     box-sizing: content-box;
 }
 
 .navbar {
-    height: 60px;
-    margin: auto;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position:fixed;
+    width:100%;
+    z-index: 1;
 }
 
 .nav-name {
