--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,19 @@
-<p>about works!</p>
+<!DOCTYPE html>
+<div class="overall-container">
+    <div class="navbar">
+        <div class="nav-name">Erik Aadalen</div>
+        <button class="nav-link" (click)="goToContact()">Contact</button>
+        <button class="nav-link" (click)="goToWork()">Work</button>
+        <button class="nav-link" (click)="goToHome()">Home</button>
+    </div>
+    <img src="../../assets/images/profile-pic.jfif" class="picture">
+    <div class="description">
+        <p class="projects-container">
+            Hi! My name is Erik Aadalen, and I'm a software developer from Minneapolis, MN. 
+            I was formerly a mechanical engineer in the HVAC industry, but now I am looking
+            to pursue a career in software engineering/web development. My interests include 
+            web design, algorithms, and artificial intelligence. Outside of my career, I 
+            enjoy playing guitar, songwriting, hanging out with friends, and playing ultimate frisbee. 
+        </p>
+    </div>
+</div>
