--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -31,3 +31,9 @@
     height: 100%;
     background-color: rgb(195, 253, 239);
 }
+
+.message {
+    text-align: center; 
+    justify-content: center;
+    align-items: center;
+}
