--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <div class="background">
     <div class="greeting">
-        <p>Hello, I'm Erik!</p>
+        <p class="message">Hello, I'm Erik!</p>
+        <br>
+        <h2 class="message">Software Engineer  |  Web Developer  |  Mobile Developer</h2>
         <div class="links">
             <button class="button" (click)="goToAbout()">About</button>
             <button class="button" (click)="goToProjects()">Projects</button>
