--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="overall-container">
     <div class="navbar">
         <div class="nav-name">Erik Aadalen</div>
-        <button class="nav-link" (click)="goToWork()">Work</button>
+        <button class="nav-link" (click)="goToWork()">Projects</button>
         <button class="nav-link" (click)="goToAbout()">About</button>
         <button class="nav-link" (click)="goToHome()">Home</button>
     </div>
