--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div style="background-image: url('../../assets/images/background-2.jpg');" class="overall-container">
+<div class="overall-container">
     <div class="navbar">
         <div class="nav-name">Erik Aadalen</div>
         <button class="nav-link" (click)="goToContact()">Contact</button>
