--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <div class="navbar">
         <div class="nav-name">Erik Aadalen</div>
         <button class="nav-link" (click)="goToContact()">Contact</button>
-        <button class="nav-link" (click)="goToWork()">Work</button>
+        <button class="nav-link" (click)="goToWork()">Projects</button>
         <button class="nav-link" (click)="goToHome()">Home</button>
     </div>
     <img src="../../assets/images/profile-pic.jfif" class="picture">
