--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -25,11 +25,18 @@
 
 .nav-link {
     float: right;
-    padding: 20px;
-    background-color: white;
+    padding: 22px;
+    background-color: rgb(255, 255, 255);
     border: none;
     color: black;
-    padding: 20px;
+}
+
+.nav-link:hover {
+    float: right;
+    padding: 22px;
+    background-color: rgb(239, 252, 255);
+    border: none;
+    color: black;
 }
 
 .project-tiles {
