--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -26,6 +26,16 @@
     font-size: 16px;
 }
 
+button:hover {
+    background-color: #6ba3b4;
+    border: none;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+}
+
 .background {
     width: 100%;
     height: 100%;
@@ -37,3 +47,5 @@
     justify-content: center;
     align-items: center;
 }
+ 
+  
