--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,6 +1,7 @@
 .overall-container {
     display: flex;
     column-gap: 100px;
+    background-color: rgb(195, 253, 239);
 }
 
 .projects-container {
