--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,24 +1,9 @@
 .overall-container {
     display: flex;
     column-gap: 100px;
-}
-
-.projects-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: center;
-    position: relative;
-    max-width: 90%;
-    margin: 0 auto;
-    margin-top: 50px;
-    padding: 20px;
-    box-sizing: content-box;
+    background-color: rgb(195, 253, 239);
+    width: 100%;
+    height: 100vh;
 }
 
 .navbar {
@@ -48,29 +33,6 @@
     background-color: rgb(239, 252, 255);
     border: none;
     color: black;
-}
-
-.project-tiles {
-    border-radius: 10px;
-    text-align: center;
-    vertical-align: middle;
-    max-width: 30%;
-    margin: 20px;
-    background-color: rgb(0, 153, 255);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.project-description {
-    text-align: center;
-    vertical-align: middle;
-    padding-left: 10px;
-    padding-right: 10px;
-    flex-grow: 1;
-}
-
-.tile-links {
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 .contact-form {
