--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
         <button class="nav-link" (click)="goToWork()">Projects</button>
         <button class="nav-link" (click)="goToHome()">Home</button>
     </div>
-    <img src="../../assets/images/profile-pic.jfif" class="picture">
+    <img src="assets/images/profile-pic.jfif" class="picture">
     <div class="description">
         <p class="projects-container">
             Hi! My name is Erik Aadalen, and I'm a software developer from Minneapolis, MN. 
