--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -9,8 +9,8 @@
     <div class="projects-container">
         <div class="project-tiles">
             <h2>PokeDex App</h2>
-            <!--<img src="../../assets/videos/pokedex.gif"  width="90%"/>-->
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <!--<img class="static" src="assets/images/pokedex.png" width="26.25%">-->
+            <img class="active" src="assets/videos/pokedex.gif"  width="90%"/>
             <br>
             <p class="project-description">
                 This app provides the user with a database of every Pokemon. When a user clicks on
@@ -22,7 +22,7 @@
         </div>
         <div class="project-tiles">
             <h2>REST Movie API</h2>
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <img src="assets/images/rest-movie.png"  width="90%"/>
             <br>
             <p class="project-description">
                 This API contains the setup for the backend of a movie database. It will respond to
@@ -33,8 +33,8 @@
         </div>
         <div class="project-tiles">
             <h2>myFlix Movie App (React Version)</h2>
-            <!--<img src="../../assets/videos/react.gif"  width="90%"/>-->
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <img class="static" src="assets/images/react-movie.png" width="26.25%">
+            <img class="active" src="assets/videos/react.gif"  width="90%"/>
             <br>
             <p class="project-description">
                 This project contains the frontend setup to be used in tandem with the backend setup
@@ -45,8 +45,7 @@
         </div>
         <div class="project-tiles">
             <h2>myFlix Movie App (Angular Version)</h2>
-            <!--<img src="../../assets/videos/angular.gif"  width="90%"/>-->
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <img src="assets/videos/angular.gif"  width="90%"/>
             <br>
             <p class="project-description">
                 This project contains the frontend setup to be used in tandem with the backend setup
@@ -57,8 +56,7 @@
         </div>
         <div class="project-tiles">
             <h2>Coding Events App</h2>
-            <!--<img src="../../assets/videos/coding-events.gif"  width="90%"/>-->
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <img src="assets/videos/coding-events.gif"  width="90%"/>
             <br>
             <p class="project-description">
                 This app connects the user to a vast list of coding events, using the Google Calendar
@@ -70,8 +68,7 @@
         </div>
         <div class="project-tiles">
             <h2>ChatApp</h2>
-            <!--<img src="../../assets/videos/pokedex.gif"  width="90%"/>-->
-            <img src="../../assets/images/rest-movie.png"  width="90%"/>
+            <img src="assets/videos/pokedex.gif"  width="90%"/>
             <br>
             <p class="project-description">
                 This app utilizes GiftedChat to allow users to exchange texts, images, and map
