--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -73,3 +73,13 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.static {
+    position:absolute;
+    background: white;
+    z-index: 2;
+}
+
+.static:hover {
+    opacity:0;
+}
