--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,5 +36,8 @@
           <input type="hidden" name="-captcha" value="false">
           <input type="hidden" name="-next" value="">
         </form>
-      </div>
+        <br>
+        <a href="https://twitter.com/EAadalen" class="logos"><img src="assets/images/twitter-logo.png" style="max-width: 30px"></a>
+        <a href="https://medium.com/@eaadalen112" class="logos"><img src="assets/images/medium.png" style="max-width: 30px"></a>
+    </div>
 </div>
